# dchu-uninstall

./: .gitignore  Cargo.toml  README.md  build.rs  copy2pub.cmd  copydbg2pub.cmd  dev-relations.xlsx  devices.txt  drivers.txt  gen_inf_list.cmd  how-to-use.txt  mtl-5522.txt  relations.txt  release-note.txt  releasenote.txt  uninstall.cmd
src/: app.rs  error.rs  exec_cmd.rs  inf_metadata.rs  logger.rs  main.rs  options.rs  thread_safe.rs  window.rs  winutil.rs
win32rs/: Cargo.toml
win32rs/src/: lib.rs  window.rs
