[package]
name = "dchu-uninstall"
version = "1.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"

[dependencies.windows-sys]
version = "0.59.0" 
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
]