[package]
name = "dchu-uninstall"
version = "2.2.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Globalization",
    "Foundation",
]

[build-dependencies]
embed-manifest = "1.4.0"
winres = "0.1.12"